--- a/Website/About.css
+++ b/Website/About.css
@@ -148,41 +148,49 @@ nav .fa{
     display: none;
 }
 
-@media(max-width: 700px)
-{
-    .text-box h1{
-    font-size: 20px;
-}
-    .nav-links ul li{
-        display: block;
-    }
-    .nav-links{
-        position: absolute;
-        background: black;
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
-    }
-
-    nav .fa{
-        display: block;
-        color: black;
-        margin: 10px; 
-        font-size: 22px;
-        cursor: pointer;
-    }
-
-    .nav-links ul{
-        padding: 30px;
-    } 
-}
-
 .icons1 {
     display: flex;
     align-items: center;
     gap: 25px;
+}
+
+/* About Section */
+.about-section {
+    text-align: center;
+    padding: 65px 30px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    margin: 40px auto;
+}
+
+.about-section img {
+    display: block;
+    margin: 0 auto 20px;
+    border-radius: 10px;
+    width: 200px;
+    height: 200px;
+}
+
+/*----- Footer ----- */
+.footer{
+    background:rgba(246, 245, 224, 0.813);
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-family: 600;
+}
+
+.icons2 .fa{
+    color: black;
+    margin: 0 14px;
+    cursor: pointer;
+    padding: 18px 0;
+    font-size: 20px;
 }
