--- a/Website/style.css
+++ b/Website/style.css
@@ -24,12 +24,11 @@ svg {
 }
 
 header {
-    width: 1200px;
-    max-width: 90%;
+    width: 90%;
+    max-width: 100%;
     margin: auto;
     display: grid;
     grid-template-columns: 50px 1fr 50px;
-    grid-template: 50px;
     justify-content: center;
     align-items: center;
     position: relative;
@@ -51,8 +50,7 @@ header .menu {
     height: auto;
 }
 
-nav 
-{
+nav {
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
@@ -65,28 +63,25 @@ nav img {
     margin-right: auto;
 }
 
-.nav-links 
-{
+.nav-links {
     flex: 1;
     text-align: right;
 }
 
-.nav-links ul li
-{
+.nav-links ul li {
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
 
-.nav-links ul li a{
+.nav-links ul li a {
     color: black;
     text-decoration: none;
     font-size: 13px;
 }
 
-.nav-links ul li::after
-{
+.nav-links ul li::after {
     content: '';
     width: 0%;
     height: 2px;
@@ -96,13 +91,11 @@ nav img {
     transition: 0.5s;
 }
 
-.nav-links ul li:hover::after
-{
+.nav-links ul li:hover::after {
     width: 100%;
 }
 
-.text-box
-{
+.text-box {
     width:  90%;
     color: black;
     position: absolute;
@@ -112,20 +105,17 @@ nav img {
     text-align: center;
 }
 
-.text-box h1
-{
+.text-box h1 {
     font-size: 50px;
 }
 
-.text-box p
-{
+.text-box p {
     margin: 10px 0 40px;
     font-size: 14px; 
     color: #000000;
 }
 
-.hero-btn 
-{
+.hero-btn {
     display: inline-block;
     text-decoration: none;
     color: black;
@@ -137,48 +127,14 @@ nav img {
     cursor: pointer;
 }
 
-.hero-btn:hover
-{
+.hero-btn:hover {
     border: 1px solid rgb(251, 251, 251, 0.411);
     background: rgb(251, 251, 251, 0.411);
     transition: 1s;
 }
 
-nav .fa{
+nav .fa {
     display: none;
-}
-
-@media(max-width: 700px)
-{
-    .text-box h1{
-    font-size: 20px;
-}
-    .nav-links ul li{
-        display: block;
-    }
-    .nav-links{
-        position: absolute;
-        background: black;
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
-    }
-
-    nav .fa{
-        display: block;
-        color: black;
-        margin: 10px; 
-        font-size: 22px;
-        cursor: pointer;
-    }
-
-    .nav-links ul{
-        padding: 30px;
-    }
 }
 
 .icons1 {
@@ -190,7 +146,7 @@ nav .fa{
 /* Member Login */
 .wrapper-login {
     width: 800px;
-    height: 400px;
+    height: 420px;
     background-image: linear-gradient(rgba(245, 246, 252, 0.52), rgba(246, 245, 224, 0.813)), url(/Images/image2.webp);
     padding: 30px;
     margin: 100px auto;
@@ -227,19 +183,24 @@ nav .fa{
 }
 
 label {
-    position: fixed;
     font-size: 15px;
     margin-bottom: 5px;
     text-align: center; 
+    display: inline-block;
 }
 
 .button {
-    background-color: white;
+    background-color: black;
     border: transparent;
     padding: 10px 10px;
-    color: black;
+    color: white;
     border-radius: 8px;
     transition: 0.3s ease-in; 
+}
+
+.button:hover {
+    background-color: #F5F5F5;;
+    color: black;
 }
 
 /* Popular Menu Items Section */
@@ -248,21 +209,53 @@ label {
     padding: 50px 0;
 }
 
-.popular-menu-items {
+.carousel-inner {
+    text-align: center;
+}
+
+.carousel-item img {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    object-fit: cover;
+    margin: auto;
+}
+
+/* Delivery Options Section */
+.delivery-options {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.options {
     display: flex;
     justify-content: center;
     gap: 30px;
 }
 
-.popular-menu-items .popular-menu-item {
+.options .option1, .options .option2, .options .option3 {
     text-align: center;
     width: 250px;
 }
 
-.popular-menu-items .popular-menu-item img {
+.options .option1 img, .options .option2 img, .options .option2 img, .options .option3 img{
     width: 100%;
-    height: 205px;
+    height: 250px;
     border-radius: 10px;
+}
+
+.options .option1 .order-now-btn, .option2 .order-now-btn, .option3 .order-now-btn {
+    background-color: black;
+    border: transparent;
+    padding: 10px 10px;
+    color: white;
+    border-radius: 8px;
+    transition: 0.3s ease-in; 
+}
+
+.options .option1 .order-now-btn:hover, .option2 .order-now-btn:hover, .option3 .order-now-btn:hover {
+    background-color: #F5F5F5;
+    color: black;
 }
 
 /*----- Footer ----- */
@@ -276,7 +269,6 @@ label {
 .footer h4{
     margin-bottom: 25px;
     margin-top: 20px;
-    font-family: 600;
 }
 
 .icons2 .fa{
