--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ svg {
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(245, 246, 252, 0.52), rgba(246, 245, 224, 0.813)), url(/Images/background.avif);
+    background-image: linear-gradient(rgba(245, 246, 252, 0.52), rgba(246, 245, 224, 0.813)), url(https://pravalika234.github.io/Elite-Cafe---Assignment/Images/background.avif);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -147,7 +147,7 @@ nav .fa {
 .wrapper-login {
     width: 800px;
     height: 420px;
-    background-image: linear-gradient(rgba(245, 246, 252, 0.52), rgba(246, 245, 224, 0.813)), url(/Images/image2.webp);
+    background-image: linear-gradient(rgba(245, 246, 252, 0.52), rgba(246, 245, 224, 0.813)), url(https://pravalika234.github.io/Elite-Cafe---Assignment/Images/image2.webp);
     padding: 30px;
     margin: 100px auto;
     text-align: center;
